--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="copyright">
-      &copy; {new Date().getFullYear()} MyAutomation Inc. All rights are reserved。 
+      &copy; {new Date().getFullYear()} Lambda-X Inc. All rights are reserved。 
     </div>
   </div>
 </footer>
